Fix getColonies() on client-side
It may return a subset